tests/paczka1/small_fuzzy/45327417.err
Error in line 1: 01sA1S A828 49,0
Error in line 3: 01sA1S S438 99,2
Error in line 4: 01sA1S S986 33,7
